# NIRISS-star-masks

./: README.md  calibrate.ipynb  mask_stars_NIRISS.py  psfmask_make_mosaic_mask.py  pyproject.toml  sizecal.py  sourcefinding_make_mosaic_mask.py
