[build-system]
requires = ["setuptools>=61.0", ]
build-backend = "setuptools.build_meta"

[project]
name = "mask_stars_NIRISS"
description = "Mask stars in JWST NIRISS images"
version = "2024.11.11"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "astropy",
  "astroquery",
  "grizli",
  "pathos",
  "opencv-python",
  "tqdm",
]
requires-python = ">=3.8"
authors = [
  {name = "Zackary Hutchens", email = "zhutchen@unca.edu"},
]
maintainers = [
  {name = "Zackary Hutchens", email = "zhutchen@unca.edu"},
]

[project.urls]
Homepage = "https://github.com/zhutchens1/NIRISS-star-masks/"
Repository = "https://github.com/zhutchens1/NIRISS-star-masks/"


